--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
 </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
     <div class="bg-noise"></div>
   </body>
 </html>
